--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: schleuder@nadir.org
 description: > # this means to ignore newlines until "baseurl:"
   Schleuder is a gpg-enabled mailinglist with remailing-capabilities.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://schleuder.nadir.org" # the base hostname & protocol for your site
+url: "https://schleuder.nadir.org" # the base hostname & protocol for your site
 exclude: [Rakefile]
 
 # Build settings
