--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Schleuder is a gpg-enabled mailinglist with remailing-capabilities.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://schleuder.org" # the base hostname & protocol for your site
-exclude: [Rakefile]
+exclude: [CODE_OF_CONDUCT.md, Rakefile, README.md, vendor]
 
 defaults:
   -
