CI: Ignore 'download' directory while deploying
Currently, we don't store the release files in git, which lead to the
fact, that they were automatically removed, due to our use of lftps
'mirror' option. This commit fixes this via ignoring this specific
directory.

Tested via an intermediate commit to ensure this works as expected.

Closes #34

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ deploy:
       " > ~/.ssh/known_hosts
     - tar fxv site.tar.gz
     # It seems, lftp needs a "dummy" password, even if key-based authentication is used
-    - lftp -e "mirror -eRv _site www; quit;" -u $DEPLOY_USER,dummy sftp://$DEPLOY_HOST
+    - lftp -e "mirror -eRv -x ^download/ _site www; quit;" -u $DEPLOY_USER,dummy sftp://$DEPLOY_HOST
   stage: deploy
   only:
     - master@schleuder/schleuder-website
