--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,9 @@
 image: debian:unstable
 
 stages:
-  - static
   - build
   - deploy
+  - qa
 
 cache:
   paths:
@@ -28,17 +28,6 @@ cache:
     - apt-get update -qq
     # To keep things DRY, use an env var to handle packages to be installed via APT
     - apt-get install -qq -y $APT_INSTALL_PACKAGES
-
-codespell:
-  variables:
-    APT_INSTALL_PACKAGES: codespell
-  <<: *setup_apt
-  script:
-    # Run codespell to check for spelling errors, using a config with ignored words,
-    # ignoring warnings about binary files and to check file names as well.
-    # Also, exclude the vendor dir, which leads to false positives.
-    - codespell -q 2 -f -I utils/ci/codespell/ignored_words.txt -S vendor
-  stage: static
 
 build:
   variables:
@@ -95,3 +84,14 @@ deploy:
   only:
     # This job relies on secret env vars, which are only available in our repo.
     - branches@schleuder/schleuder-website
+
+codespell:
+  variables:
+    APT_INSTALL_PACKAGES: codespell
+  <<: *setup_apt
+  script:
+    # Run codespell to check for spelling errors, using a config with ignored words,
+    # ignoring warnings about binary files and to check file names as well.
+    # Also, exclude the vendor dir, which leads to false positives.
+    - codespell -q 2 -f -I utils/ci/codespell/ignored_words.txt -S vendor
+  stage: qa
