--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
 title: Schleuder
 email: team@schleuder.org
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "url:"
   Schleuder is a gpg-enabled mailinglist with remailing-capabilities.
-baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://schleuder.org" # the base hostname & protocol for your site
 exclude: [Rakefile, README.md, vendor]
 
