CI: Disable git operations for the deploy and linkcheck jobs
These jobs don't rely on any actual code of the repo, accordingly,
disable git operations to decrease execution time.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,8 @@ deploy:
   only:
     # This job relies on secret env vars, which are only available in our repo.
     - branches@schleuder/schleuder-website
+  variables:
+    GIT_STRATEGY: none
 
 codespell:
   script:
@@ -83,3 +85,5 @@ linkcheck:
     # branch.
     - master@schleuder/schleuder-website
   stage: qa
+  variables:
+    GIT_STRATEGY: none
