CI: deploy: ignore 'dev' directory (regression fix)
Otherwise, if the master branch is deployed, the 'dev' directory is
removed, which possibly contains data we want to keep, for example code
coverage reports or proposed website changes.

This commit fixes a regression introduced in
4e0c624ffbfa12a760acbe55ba1410bcc71749b7.

It was tested via an intermediate commit to ensure it works as expected.

Relates !71

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ deploy:
         DEPLOY_SLUG="www";
         export DEPLOY_SLUG;
       fi
-    - lftp -e "mirror -eRv -x ^download/ _site $DEPLOY_SLUG; quit;" -u $DEPLOY_USER,dummy sftp://$DEPLOY_HOST
+    - lftp -e "mirror -eRv -x ^dev/ -x ^download/ _site $DEPLOY_SLUG; quit;" -u $DEPLOY_USER,dummy sftp://$DEPLOY_HOST
     # TODO: Implement clean up: Remove the review dir once the merge to master happened.
   stage: deploy
   # It's currently not possible to use env vars which are / were set in the script: part above.
