--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,8 @@ codespell:
   script:
     # Run codespell to check for spelling errors, using a config with ignored words,
     # ignoring warnings about binary files and to check file names as well.
-    # Also, exclude the vendor dir, which leads to false positives.
-    - codespell -q 2 -f -I utils/ci/codespell/ignored_words.txt -S vendor
+    # Also, exclude the vendor and the .git dir, which lead to false positives.
+    - codespell -q 2 -f -I utils/ci/codespell/ignored_words.txt -S vendor -S .git
   # This job should help with merge requests. Therefore, don't run it
   # against the main branch.
   only:
